Added friendly reminder to example file

--- a/Dockerfile.example
+++ b/Dockerfile.example
@@ -2,13 +2,15 @@
 # github: https://github.com/srcclr/agent-docker-example
 # USAGE: Rename 'Dockerfile.example' to 'Dockerfile' before using
 
-FROM      ubuntu
+FROM      ubuntu:latest
+
+RUN       echo "please edit the Dockerfile with token and app before you use this" ; exit 1
 
 RUN       apt-get -y update && \
           apt-get install -y curl python-pip && \
           mkdir -p /home/app
 
-ADD      vulnerable  /home/app/
+ADD      vulnerable_app  /home/app/
 
 WORKDIR   /home/app
 
